Finalizada la cabecera con diseño dorado

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,3 +10,10 @@ body {
     margin: 0 auto;
     border: 1px solid gray;
 }
+
+#cabecera {
+    color: white;
+    background-color: goldenrod;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 2rem;
+}
