Mejora en la posicion de la imagen del poyo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,8 +13,16 @@ body {
 }
 
 #cabecera {
+    display: flex;
     color: white;
     background-color: goldenrod;
     font-family: 'Courier New', Courier, monospace;
     font-size: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.poyito {
+    width: 5rem;
+    height: 5rem;
 }
