--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,11 @@ body {
     color: red;
 }
 
+footer {
+    background-color: black;
+    color: white;
+}
+
 #container{
     width: 70%;
     padding: 1rem;
